# seqres-tools

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  filehandle.c  filehandle.h  main.c  sequence.c  sequence.h
src/: dynamic_array.c  dynamic_array.h  filehandle.c  filehandle.h  globals.h  hits.c  hits.h  kmer_counter.c  kmer_counter.h  main.c  read_write_occurrences.c  rw_occurrences.c  rw_occurrences.h  seq_distances.c  seq_distances.h  sequence.c  sequence.h
